# navi_ROS2

husky-humble/husky_description/urdf/: husky.urdf.xacro
husky-humble/husky_gazebo/meshes/Dynamic Berries/: collisionmap.stl  ripeberry.dae  stem.dae  unripeberry.dae
husky-humble/husky_gazebo/models/AG06_1/: model.config  model.sdf
husky-humble/husky_gazebo/models/AG06_2/: model.config  model.sdf
husky-humble/husky_gazebo/models/AG06_3/: model.config  model.sdf
husky-humble/husky_gazebo/models/AG06_4/: model.config  model.sdf
husky-humble/husky_gazebo/models/AG06_5/: model.config  model.sdf
husky-humble/husky_gazebo/models/AG06_6/: model.config  model.sdf
husky-humble/husky_gazebo/models/AG06_7/: model.config  model.sdf
husky-humble/husky_gazebo/models/AG06_8/: model.config  model.sdf
husky-humble/husky_gazebo/models/AG06_9/: model.config  model.sdf
husky-humble/husky_gazebo/worlds/: aoc_world.world
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/navigros2/lib/navigros2/: vgg.py  (+9 more)
log/: latest_build
map_t/map_t/: map_t_0.db3  metadata.yaml
navigros2/: CMakeLists.txt  package.xml
navigros2/action/: MapRepeater.action
navigros2/launch/: navigros2-gui-launch.py  navigros2_launch.py
navigros2/msg/: Alignment.msg  FeatureLocations.msg
navigros2/src/Distance/: distance_ros.py
navigros2/src/alignment/: alignment.py  alignment_ros.py
navigros2/src/alignment/backends/: __init__.py:Zone.Identifier  vgg.py
navigros2/src/distance/: distance_ros.py
navigros2/src/master/: mapmaker_ros.py  repeater_ros.py
navigros2/src/navigator/: navigator_ros.py
navigros2/src/scripts/: keyboard.py
navigros2/srv/: SetClockGain.srv
navigros2/yaml/: alignment.yaml
testing_mapi/: params
testing_mapi/testing_mapi/: metadata.yaml  testing_mapi_0.db3
(+332 files in other folders)
